# horizon

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  horizon.sh
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/Database/: CMakeLists.txt  ConnectionPool.hpp
src/Core/Logging/: Logger.cpp  Logger.hpp
src/Core/Multithreading/: LockedLookupTable.hpp  ParallelDataLockDesign.hpp  ProducerConsumerQueue.hpp  ThreadSafeQueue.hpp  WorkerThreadPool.hpp
src/Core/Multithreading/TaskScheduler/: TaskScheduler.hpp
src/Core/Networking/: AcceptSocketMgr.hpp  NetworkThread.hpp
src/Core/Networking/Buffer/: ByteBuffer.cpp  ByteBuffer.hpp
src/Core/Structures/LinkedList/: Element.hpp  Head.hpp
src/Core/Structures/LinkedList/ReferenceList/: RefManager.hpp  Reference.hpp
src/Libraries/: CMakeLists.txt
src/Libraries/GRF/: CMakeLists.txt  DES.cpp  DES.hpp  GRF.cpp  GRF.hpp
src/Libraries/MapCache/: CMakeLists.txt  MapCache.cpp  MapCache.hpp
src/Libraries/Networking/: AcceptSocketMgr.hpp  AsyncAcceptor.hpp  CMakeLists.txt  ConnectSocketMgr.hpp  Connector.hpp  NetworkThread.hpp  Session.hpp  Socket.hpp  SocketMgr.hpp
src/Libraries/Networking/Buffer/: ByteBuffer.cpp  ByteBuffer.hpp  ByteConverter.hpp  MessageBuffer.hpp
src/Server/: CMakeLists.txt  pch.hpp
src/Server/Auth/: Auth.cpp  Auth.hpp  CMakeLists.txt  Main.cpp
src/Server/Auth/Interface/: AuthClientInterface.cpp  AuthClientInterface.hpp
src/Server/Auth/Packets/: HandledPackets.cpp  HandledPackets.hpp  TransmittedPackets.cpp  TransmittedPackets.hpp
src/Server/Auth/Packets/AD/: 20060109.hpp  20060126.hpp  20060626.hpp  ClientPacketLengthTable.hpp  Default.hpp  PacketLengthTable.hpp
src/Server/Auth/Packets/RE/: 20100601.hpp  20100615.hpp  20101228.hpp  20110706.hpp  20110726.hpp  20120626.hpp  20130115.hpp  20130220.hpp  20170621.hpp  20171213.hpp  20180704.hpp  ClientPacketLengthTable.hpp  Default.hpp  PacketLengthTable.hpp
src/Server/Auth/Packets/Ragexe/: 20031223.hpp  20050912.hpp  20060821.hpp  20070227.hpp  20090701.hpp  20100413.hpp  20110705.hpp  20111025.hpp  20120612.hpp  20120702.hpp  20120716.hpp  20130103.hpp  20130130.hpp  20130605.hpp  20170228.hpp  20170614.hpp  20170705.hpp  20171115.hpp  ClientPacketLengthTable.hpp  Default.hpp  PacketLengthTable.hpp
src/Server/Auth/Packets/Sakray/: 20040322.hpp  20040517.hpp  20040531.hpp  20050628.hpp  20060424.hpp  20060731.hpp  20070514.hpp  20080102.hpp  20080715.hpp  20080722.hpp  ClientPacketLengthTable.hpp  Default.hpp  PacketLengthTable.hpp
src/Server/Auth/Packets/Zero/: 20171018.hpp  20171113.hpp  20171123.hpp  20180627.hpp  ClientPacketLengthTable.hpp  Default.hpp  (+1 more)
src/Server/Auth/Session/: AuthSession.cpp  AuthSession.hpp
src/Server/Auth/Socket/: AuthSocket.cpp  AuthSocket.hpp
src/Server/Auth/SocketMgr/: ClientSocketMgr.cpp  ClientSocketMgr.hpp
src/Server/Char/: CMakeLists.txt  Char.cpp  Char.hpp  Main.cpp
src/Server/Char/Interface/: CharClientInterface.cpp  CharClientInterface.hpp
src/Server/Char/Packets/: HandledPackets.cpp  HandledPackets.hpp  TransmittedPackets.cpp  TransmittedPackets.hpp
src/Server/Char/Session/: CharSession.cpp  CharSession.hpp
src/Server/Char/Socket/: CharSocket.cpp  CharSocket.hpp
src/Server/Char/SocketMgr/: ClientSocketMgr.cpp  ClientSocketMgr.hpp
src/Server/Common/: CMakeLists.txt  Server.cpp  Server.hpp  ServerDefinitions.hpp  System.cpp  System.hpp
src/Server/Common/Base/: NetworkPacket.hpp
src/Server/Common/CLI/: CLICommand.hpp  CommandLineInterface.cpp  CommandLineInterface.hpp
src/Server/Common/Configuration/: CMakeLists.txt  Client.hpp  Database.hpp  Horizon.hpp  ServerConfiguration.hpp
src/Server/Common/Definitions/: BattleDefinitions.hpp  CMakeLists.txt  ClientDefinitions.hpp  Definitions.hpp  EntityDefinitions.hpp  ItemDefinitions.hpp  LuaDefinitionSync.cpp  LuaDefinitionSync.hpp  MonsterDefinitions.hpp  NPCDefinitions.hpp  SkillDefinitions.hpp  StatusEffectDefinitions.hpp
src/Server/Common/Interfaces/: ClientInterface.hpp  InterServerAPI.hpp
src/Server/Common/Packets/: HandledPackets.cpp  HandledPackets.hpp  TransmittedPackets.cpp  TransmittedPackets.hpp
src/Server/Common/SQL/: GameAccount.hpp  SessionData.hpp
src/Server/Zone/: CMakeLists.txt  Main.cpp  Zone.cpp  Zone.hpp  ZoneRuntime.cpp  ZoneRuntime.hpp  ZoneSystem.cpp  ZoneSystem.hpp
src/Server/Zone/Definitions/: BattleDefinitions.hpp  ClientDefinitions.hpp  CombatDefinitions.hpp  EntityDefinitions.hpp  ItemDefinitions.hpp  MapDefinitions.hpp  MonsterDefinitions.hpp  NPCDefinitions.hpp  PlayerDefinitions.hpp  SkillDefinitions.hpp  StatusEffectDefinitions.hpp  UnitDefinitions.hpp
src/Server/Zone/Game/: GameLogicProcess.cpp  GameLogicProcess.hpp  GridObject.hpp
src/Server/Zone/Interface/: CMakeLists.txt  ZoneClientInterface.cpp  ZoneClientInterface.hpp
src/Server/Zone/LUA/: CMakeLists.txt  LUAManager.cpp  LUAManager.hpp
src/Server/Zone/Packets/: HandledPackets.cpp  HandledPackets.hpp  TransmittedPackets.cpp  TransmittedPackets.hpp
src/Server/Zone/Persistence/: CMakeLists.txt  PersistenceManager.cpp  PersistenceManager.hpp
src/Server/Zone/Script/: CMakeLists.txt  ScriptManager.cpp  ScriptManager.hpp
src/Server/Zone/Session/: ZoneSession.cpp  ZoneSession.hpp
src/Server/Zone/Socket/: ZoneSocket.cpp  ZoneSocket.hpp
src/Server/Zone/SocketMgr/: ClientSocketMgr.cpp  ClientSocketMgr.hpp
src/Tests/: AStarTest.cpp  AuthServerTest.cpp  CMakeLists.txt  CharServerTest.cpp  LinkedListTest.cpp  LockedLookupTableTest.cpp  LoggingTest.cpp  MySQLTest.cpp  ObservableStatusTest.cpp  ParallelDataLockDesignTest.cpp  ReferenceListTest.cpp  ReferenceTypeListTest.cpp  Sol2Test.cpp  SystemRoutinesTest.cpp  TaskSchedulingTest.cpp  ThreadSafeQueueTest.cpp  WorkerThreadPoolTest.cpp  ZoneServerTest.cpp  ZoneSystemTest.cpp
src/Tools/mapcache/: CMakeLists.txt  MapCache.cpp  MapCache.hpp
src/Utility/: CMakeLists.txt  StrUtils.hpp  TaskScheduler.cpp  TaskScheduler.hpp  Tokenizer.cpp  Tokenizer.hpp  Utility.cpp  Utility.hpp
(+1401 files in other folders)
